# Compilers-Course-Homework-1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  io.ki  ki.ki  lexer.hpp  lexer.l  main.cpp  main.h  parser.yy  test.cmake
.github/workflows/: cmake-single-platform.yml
cmake/: EncodeString.cmake
kiraz/: Compiler.cpp  Compiler.h  ModuleList.cpp  ModuleList.h  Node.cpp  Node.h  NodeList.cpp  NodeList.h  Token.cpp  Token.h
kiraz/ast/: Identifier.cpp  Identifier.h  Keyword.h  Let.cpp  Let.h  List.h  Literal.cpp  Literal.h  Module.cpp  Module.h  Operator.cpp  Operator.h  Statement.cpp  Statement.h  String.cpp  String.h
kiraz/test/: test_arithmetic.cc  test_parser.cc  test_semantic.cc  test_semantics.cc
kiraz/token/: Identifier.cpp  Identifier.h  Keyword.cpp  Keyword.h  Literal.cpp  Literal.h  Operator.cpp  Operator.h  String.cpp  String.h
